# VHID

./: .gitignore  CMakeLists.txt  README.md  clean_install.ps1  debug_install.ps1  sign_driver_task.ps1  sign_task.ps1  sign_task_debug.ps1  sign_task_fixed.ps1
.smoke/: dev.in.txt  dev.out.txt  host.in.txt  host.out.txt
driver/vhid/: Driver.cpp  Public.h  README.md  Vhf.cpp  build-driver.ps1  sign-dev.ps1  vhid.inf  vhid.vcxproj
installer/: install.ps1  pack.ps1  uninstall.ps1
samples/consumer_app/: CMakeLists.txt
samples/consumer_app/src/: main.cpp
scripts/: gui-screenshot.ps1  pack-release.ps1  smoke-mock.ps1
src/capture/: CMakeLists.txt
src/capture/include/vhid/: descriptor_builder.hpp  device_enumerator.hpp  device_inspector.hpp  device_profile.hpp
src/capture/src/: descriptor_builder.cpp  device_enumerator.cpp  device_inspector.cpp  device_profile.cpp
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/core/: CMakeLists.txt
src/core/include/vhid/: report_descriptor.hpp  reports.hpp
src/core/src/: report_descriptor.cpp  reports.cpp
src/gui/: CMakeLists.txt
src/gui/src/: main.cpp
src/mock/: CMakeLists.txt
src/mock/include/vhid/: hid_transport.hpp  in_process_transport.hpp  named_pipe_transport.hpp
src/mock/src/: in_process_transport.cpp  named_pipe_transport.cpp
src/sdk/: CMakeLists.txt
src/sdk/include/vhid/: vhid_device.hpp
src/sdk/src/: driver_transport.cpp  vhid_device.cpp
tests/: CMakeLists.txt
tests/include/: vhid_test.hpp
tests/src/: test_capture.cpp  test_descriptor.cpp  test_in_process_transport.cpp  test_main.cpp  test_reports.cpp
